# specterext-spotbit

./: available_exchanges_currencies.py  requirements.txt
spotbit-plugin/: MANIFEST.in  requirements.txt  setup.cfg
spotbit-plugin/src/ahv15/specterext/spotbit/: controller.py  service.py
spotbit-plugin/src/ahv15/specterext/spotbit/templates/spotbit/: index.jinja  settings.jinja
spotbit-plugin/src/ahv15/specterext/spotbit/templates/spotbit/components/: spotbit_menu.jinja  spotbit_tab.jinja
src/ahv15/specterext/spotbit/: __main__.py  config.py  controller.py
src/ahv15/specterext/spotbit/templates/spotbit/: base.jinja  index.jinja  settings.jinja
