[metadata]
name = ahv15_spotbit
version = 0.0.1
author = ahv15
author_email = av.harshith15@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ahv15/specterext-spotbit
project_urls =
    Bug Tracker = https://github.com/ahv15/specterext-spotbit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data=true
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6

[options.packages.find]
where = src